--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,10 +8,10 @@
   url = "#about"
   weight = 10
 
-[[main]]
-  name = "Workshops"
-  url = "courses/"
-  weight = 50
+# [[main]]
+#  name = "Workshops"
+#  url = "courses/"
+#  weight = 50
 
 [[main]]
   name = "Projects"
